--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://abisakyn:pfoWbOXFIVt8Tug5@todo.zwkrqsn.mongodb.net/?retryWrites=true&w=majority&appName=todo
+
+ //password pfoWbOXFIVt8Tug5
+//username abisakyn
